<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/loginField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_login"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintTop_toBottomOf="@id/loginField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        app:layout_constraintTop_toBottomOf="@id/passwordTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/isAutologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/isAutologinTitle"
        app:layout_constraintBottom_toBottomOf="@id/isAutologinTitle"/>

    <TextView
        android:id="@+id/isAutologinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_autologin_title"
        app:layout_constraintStart_toEndOf="@id/isAutologin"
        app:layout_constraintTop_toBottomOf="@id/passwordField"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inputBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_btn_title"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isAutologinTitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>